--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yodahekinsew.github.io/website",
+  "homepage": "https://yodahekinsew.github.io/website/",
   "name": "yodahe",
   "version": "0.1.0",
   "private": true,
